moved enums and validators to separate package directories, freeing up DoormatSettings.java
added producers of redstone power to the tinker kit
added piglinBlockGuarding

fixed barrels checking every tick for item dumping (now relies on neighbor updates and markDirty calls
slightly adjusted the height at which item entities spawn below barrels when dumped
upped the priority of tinker kit mixins
changed most switch statements for enum options to functions inside enum constructors